<resources>
    <string name="app_name">cash-flow</string>
    <string name="add">Add</string>
    <string name="balance">Balance</string>
    <string name="entries">Entries</string>
    <string name="date">Date</string>
    <string name="detail">Detail</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="update">Update</string>
    <string-array name="cash_options">
        <item>Credit</item>
        <item>Debit</item>
    </string-array>
    <string-array name="credit_options">
        <item>Salary</item>
        <item>Extra</item>
    </string-array>
    <string-array name="debit_options">
        <item>Food</item>
        <item>Transport</item>
        <item>Health</item>
        <item>Home</item>
    </string-array>
</resources>